# hoopi-pi-ng

./: .gitignore  BUILD.md  CMakeLists.txt  CREDITS.md  README.md  build-deb.sh  build-pi3.sh  deploy-build.sh  deploy-service.sh  hoopi-pi-engine.service  hoopi-pi-web.service
HoopiPi/: AlsaBackend.cpp  AlsaBackend.h  AudioRecorder.h  CMakeLists.txt  ConfigPersistence.h  DCBlocker.cpp  DCBlocker.h  Engine.cpp  Engine.h  HoopiPiCApi.cpp  HoopiPiCApi.h  IPCServer.cpp  IPCServer.h  JackBackend.cpp  JackBackend.h  ModelLoader.cpp  ModelLoader.h  NoiseGate.cpp  NoiseGate.h  Reverb.cpp  Reverb.h  ThreeBandEQ.h  WAVWriter.h
api-server/: CMakeLists.txt  README.md  main.cpp
debian/: .gitignore
debian/DEBIAN/: control  postinst  prerm
debian/etc/security/limits.d/: 99-hoopi-pi-audio.conf
debian/lib/systemd/system/: hoopi-api.service  hoopi-engine.service  hoopi-jack.service
standalone/: BackingTrack.cpp  BackingTrack.h  CMakeLists.txt  config.ini  main.cpp  main_jack.cpp
web-ui/: index.html  package-lock.json  package.json  vite.config.js
web-ui/src/: App.jsx  api.js
web-ui/src/components/: AudioDeviceSettings.jsx  BackingTrackControl.jsx  EQControls.jsx  GainControls.jsx  InputGainControl.jsx  MetricsHistory.jsx  ModelList.jsx  NAMModelControl.jsx  NoiseGateControls.jsx  OutputGainControl.jsx  PerChannelControls.jsx  Recordings.jsx  ReverbControls.jsx  SlotStatus.jsx  Stereo2MonoMixControls.jsx  StereoModeSelector.jsx  UploadZone.jsx
